fix dna colors with themes colors

--- a/app/assets/stylesheets/loading_animation.scss
+++ b/app/assets/stylesheets/loading_animation.scss
@@ -33,16 +33,16 @@
 
 .loader_1 {
   &-item {
-    box-shadow: 0 0 2px #18594c;
-    background: #18594c;
+    box-shadow: 0 0 2px #18bc9c;
+    background: #18bc9c;
     opacity: 0.8;
   }
 }
 
 .loader_2 {
   &-item {
-    box-shadow: 0 0 2px #87c359;
-    background: #87c359;
+    box-shadow: 0 0 2px #2c3e50;
+    background: #2c3e50;
     opacity: 0.8;
   }
 }
