--- a/app/assets/stylesheets/loading_animation.scss
+++ b/app/assets/stylesheets/loading_animation.scss
@@ -1,6 +1,6 @@
 .container-animation {
   z-index: 999;
-  position: absolute;
+  position: relative;
   width: 200px;
   height: 200px;
   display: flex;
@@ -25,7 +25,7 @@
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #fff;
+    background: #f39c12;
     margin: 5px;
     animation: animate 4s linear infinite;
   }
@@ -61,8 +61,8 @@
   &-item {
     width: 30px;
     height: 3px;
-    background: #fff;
-    box-shadow: 0 0 2px #fff;
+    background: #f39c12;
+    box-shadow: 0 0 2px #f39c12;
     margin: 11px;
     opacity: 0.8;
     animation: width 2s linear infinite;
