fix position of the loading dna

--- a/app/assets/stylesheets/loading_animation.scss
+++ b/app/assets/stylesheets/loading_animation.scss
@@ -1,11 +1,14 @@
 .container-animation {
   z-index: 999;
-  position: relative;
-  width: 200px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  top: auto;
+  bottom: auto;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: 500px;
 }
 
 .loader_1,
