--- a/app/views/layouts/_loading_animation.html.erb
+++ b/app/views/layouts/_loading_animation.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag "loading_animation" %>
-<div class="container-loading loading-wrapper">
+<div class="container-animation loading-wrapper">
   <div class="loader_1">
     <div class="loader_1-item"></div>
     <div class="loader_1-item"></div>
