--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -3,8 +3,8 @@
     <h4 class="text-center fw-blod mt-2 mb-3">Voici les <%= @results.count %> resultats de votre recherche de "<%= @keyword %>"</h4>
     <% @results.each_with_index do |article, index| %>
       <div class=" preview-article row mt-4" id="<%= index %>">
-        <div class="d-flex justify-content-center col-2 col-md-4 border-primary">
-          <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEMu_7Zrv8wPEw2zvfLT3FOcYBjNJCOy1bKQ&usqp=CAU' alt='img exemple' class="img-thumbnail"/>
+        <div class="container d-flex justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
+          <%= image_tag(article.picture, class: 'img-thumbnail') %>
         </div>
         <div class="col">
           <h4><%= article.title %></h4>
