fixed keyword not showing on no more results and removed the 20 articles limit

--- a/app/views/searches/_no_more_results.html.erb
+++ b/app/views/searches/_no_more_results.html.erb
@@ -1,2 +1,2 @@
 <h4 class="text-center fw-blod mt-2 mb-3">Nous n'avons plus de résultats pour votre recherche de
-  "<%= @keyword %>"</h4>
+  "<%= keyword %>"</h4>
