--- a/app/views/searches/index.js.erb
+++ b/app/views/searches/index.js.erb
@@ -15,7 +15,7 @@ function reload() {
 reload()
 
 ul = document.querySelector('ul.pagination');
-url = "<%= searches_path %>" + "?page="
+url = "<%= searches_path %>"
 page = "<%= @page %>"
 keyword = "<%= @keyword %>"
 
