--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,7 +30,7 @@
 
 <script id='paging-script'>
     let ul = document.querySelector('ul.pagination');
-    let url = "<%= articles_path %>" + "?page=";
+    let url = "<%= articles_path %>"
     let page = <%= @page %>;
 
     let p = new Paging(ul, url, page)
