--- a/app/views/articles/_article_list.html.erb
+++ b/app/views/articles/_article_list.html.erb
@@ -1,3 +1,11 @@
+<div class="d-flex justify-content-center">
+  <div class=" col-5 my-2">
+    <%= form_tag(url_for(controller: 'searches', action: 'index'), method: 'get', class: 'input-group w-auto ml-3') do %>
+      <%= text_field_tag 'keyword', nil, class: "form-control rounded border-muted", placeholder: "rechercher" %>
+      <%= image_submit_tag('https://api.iconify.design/mdi/magnify.svg?color=%212529', class: 'ms-2') %>
+    <% end %>
+  </div>
+</div>
 <% @articles.each_with_index do |article, index| %>
   <div class="preview-article row mt-4">
     <div class="container d-flex justify-content-center col-2 col-md-4 border-primary" style="max-height: 18vh">
