--- a/app/assets/stylesheets/above.css
+++ b/app/assets/stylesheets/above.css
@@ -1,9 +1,11 @@
 .above-small {
   position: relative;
   top: -25px;
+  box-shadow: 0 0 0.8rem 0 #9a9c9c ;
 }
 
 .above {
   position: relative;
   top: -70px;
+  box-shadow: -0.4em  0.4em 0.7em 0  #9a9c9c ;
 }
