--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= favicon_link_tag asset_path('favicon.ico') %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div class="row d-flex">
