--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
   <div class="offset-2 col-6 col-xl-6 mx-auto">
-    <div class="card text-center border-secondary py-4 bg-light above-small">
+    <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
     <div class="row">
       <div class="col-6">
           <h3>Modifier mon compte</h3>
