--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,5 +1,5 @@
   <div class="offset-2 col-6 col-xl-6 mx-auto">
-    <div class="card text-center border-secondary py-4 bg-light above-small">
+    <div class="card text-center border-secondary py-4 bg-light above-small shadow-lg">
     <h3>Mot de passe oublié ?</h3>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
