--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,7 +1,7 @@
 <div%= stylesheet_link_tag "article_show" %>
 <div class="col">
     <div class="offset-2 col-8 mx-auto">
-        <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
+        <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
             <h3 class="text-center"><strong>À propos</strong></h3>
             <div class="card border-light p-4 justify-content-center bg-light ">
                 <div class="card-header text-center">Le concept GAFFEX</div>
