--- a/app/views/static_pages/what_is_gaffex.html.erb
+++ b/app/views/static_pages/what_is_gaffex.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "article_show" %>
 <div class="col">
     <div class="offset-2 col-8 mx-auto">
-        <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
+        <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
             <h3 class="text-center"><strong>Projet GAFFEX</strong></h3>
             <div class="card border-light p-4 justify-content-center bg-light ">
                 <div class="card-header">Qu’est-ce que Gaffex ?</div>
