--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
-    <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small ">
+    <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small shadow-lg">
           <h3>Modifier votre profil</h3>
           
           <%= form_tag user_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
