--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "article_show" %>
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
-    <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
+    <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-show">
       <div id="repertory" class="card-header repertory">
         <div id="icon" class="float-end">
           <span class="iconify" data-icon="mdi:pin"></span>
