add target_blank in license to footer and footer sticky

--- a/app/views/layouts/_footer_sticky.html.erb
+++ b/app/views/layouts/_footer_sticky.html.erb
@@ -21,7 +21,7 @@
             <a
               class="text-decoration-none"
               href="https://github.com/8UK0W5K1/theGaffexProject/blob/master/LICENSE.txt"
-              >Licence</a
+              target="_blank">Licence</a
             >
           </h6>
         </div>
