--- a/app/views/searches/_paging.html.erb
+++ b/app/views/searches/_paging.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "paging" %>
 <ul class="pagination">
   <li class="page-item disabled" id="btn-prev">
     <%= link_to '<<', searches_path(page: 0, keyword: @keyword), class: 'page-link', remote: true %>
