--- a/app/views/articles/_details_article_show.html.erb
+++ b/app/views/articles/_details_article_show.html.erb
@@ -8,7 +8,7 @@
       <div class="summary">
         <div class="card border-secondary p-0 m-50 bg-light ">
          
-            <div class="card-header">Résumé</div>
+            <div class="card-header">1. Résumé</div>
             <div class="card-body-summary justify-content-center">
               <%= simple_format(@article.summary)%>
             </div>
@@ -18,7 +18,7 @@
 
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div id="introduction">
-          <div class="card-header">Introduction</div>
+          <div class="card-header">2. Introduction</div>
           <div class="card-body justify-content-center">
             <%= simple_format(@article.introduction)%>
           </div>
@@ -27,7 +27,7 @@
 
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div id="protocol">
-          <div class="card-header">Protocole</div>
+          <div class="card-header">3. Protocole</div>
           <div class="card-body justify-content-center">
               <%=simple_format(@article.protocol)%>
           </div>
@@ -36,7 +36,7 @@
 
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div id="results">
-          <div class="card-header">Résultats</div>
+          <div class="card-header">4. Résultats</div>
           <div class="card-body justify-content-center">
             <%= simple_format(@article.result)%>
           </div>
@@ -45,7 +45,7 @@
 
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div id="conclusion">
-          <div class="card-header">Conclusion</div>
+          <div class="card-header">5. Conclusion</div>
           <div class="card-body justify-content-center">
             <%= simple_format(@article.conclusion)%>
           </div>
@@ -54,7 +54,7 @@
 
       <div class="card border-light p-4 justify-content-center bg-light ">
         <div id="references">
-          <div class="card-header">Références</div>
+          <div class="card-header">6. Références</div>
           <div class="card-body card-body-references justify-content-center">
             <%= simple_format(@article.references)%>
           </div>
