--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,8 +24,9 @@
     let ul = document.querySelector('ul.pagination');
     let url = "<%= articles_path %>"
     let page = <%= @page %>;
+    let totalPages = <%= @total_pages %>;
 
-    let p = new Paging(ul, url, page)
+    let p = new Paging(ul, url, page, totalPages)
 
     p.init()
 </script>
