updated search bar paging with the latest paging version

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -20,8 +20,9 @@
     let url = "<%= articles_path %>";
     let page = <%= @page %>;
     let keyword= "<%= @keyword %>";
+    let totalPages = <%= @total_pages %>;
 
-    let p = new Paging(ul, url, page, keyword)
+    let p = new Paging(ul, url, page, totalPages, keyword)
 
     p.init()
 </script>
