--- a/app/assets/stylesheets/article_index.css
+++ b/app/assets/stylesheets/article_index.css
@@ -1,3 +1,12 @@
 .border-light {
     border: none !important;
   }
+
+  .clickable a {
+    text-decoration: none;
+    color:#2c3e50;
+  }
+  
+  .clickable a:hover {
+    color:black;
+  }
