--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,7 +49,7 @@
     </div>
     <%= button_to "Supprimer", registration_path(resource_name), data: { confirm: "Vous êtes sûr ?" }, class: "btn btn-lg btn-danger border-primary m-2", method: :delete %></p>
 
-    <span class="mb-3"><%= link_to "Retour", :back%></span>
+    <span class="mb-3"><%= link_to "Retour", root_path %></span>
 
       </div>
     </div>
