new message for the about us page

--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -4,9 +4,9 @@
         <div class="card border-secondary p-4 justify-content-center bg-light above-small shadow-lg">
             <h3 class="text-center"><strong>À propos</strong></h3>
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header text-center">Le concept GAFFEX</div>
+                <div class="card-header text-center">Le concept "GAFFEx"</div>
                 <div class="card-body text-center">
-                Le développement du GAFFEx est soutenu par l’association « Science Unchained ». Une équipe forte est leur travail dans les coulisses rendant la plate-forme librement disponible. Si vous avez le sentiment que vous pouvez également apporter vos compétences au sein de notre équipe pour améliorer la plateforme ou développer de nouveaux services, veuillez<a class="text-decoration-none" href="<%= contact_path %>"> nous contacter.</a>
+                Le Projet GAFFEx est soutenu par l'association « Science Unchained » autour d'une équipe de bénévoles. Si vous avez le sentiment que vous pouvez apporter vos compétences au sein de celle-ci, pour améliorer la plateforme web ou développer de nouveaux services, n'hésitez pas à <a class="text-decoration-none" href="<%= contact_path %>"> nous contacter.</a>
                 </div>           
             </div>
         </div>
