--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "article_index" %>
 <div id="above-card" class="offset-2 col-12 col-xl-8 mx-auto">
   <div id="card" class="card border-secondary p-4 justify-content-center bg-light above-small">
     <%= render 'results_list' %>
