--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -3,21 +3,21 @@
     <% if type == 'alert' %>
       <div class="alert alert-danger w-60 border-0">
         <span class="iconify" data-icon="mdi:information-outline"></span>
-        <span class="alert-text"><%= msg %></span>
+        <span id="flash-msg" class="alert-text"><%= msg %></span>
         <a id="close"><span class="iconify" data-icon="mdi:close"></span></a>
       </div>
       <%= javascript_include_tag 'flash.js' %>
     <% elsif type == 'notice' %>
       <div class="alert alert-success w-60 border-0">
         <span class="iconify" data-icon="mdi:information-outline"></span>
-        <span class="alert-text"><%= msg %></span>
+        <span id="flash-msg" class="alert-text"><%= msg %></span>
         <a id="close"><span class="iconify" data-icon="mdi:close"></span></a>
       </div>
       <%= javascript_include_tag 'flash.js' %>
     <% else %>
       <div class="alert alert-info w-60 border-0">
         <span class="iconify" data-icon="mdi:information-outline"></span>
-        <span class="alert-text"><%= msg %></span>
+        <span id="flash-msg" class="alert-text"><%= msg %></span>
         <a id="close"><span class="iconify" data-icon="mdi:close"></span></a>
       </div>
       <%= javascript_include_tag 'flash.js' %>
