fixed the link!

--- a/app/views/errors/internal_error.html.erb
+++ b/app/views/errors/internal_error.html.erb
@@ -11,7 +11,7 @@
           alt="mascotte"
         /></div>
                 <div class="card-body text-center">
-                <h3> Une erreur s'est produite.  <br>Vous pouvez revenir à <a class="text-decoration-none" href="<%= contact_path %>">la page d'accueil.</a>
+                <h3> Une erreur s'est produite.  <br>Vous pouvez revenir à <a class="text-decoration-none" href="<%= root_path %>">la page d'accueil.</a>
                 </h3>
                 </div>           
             </div>
