--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -3,7 +3,9 @@
   <div id="card" class="card border-secondary p-4 justify-content-center bg-light above-small">
     <%= render 'results_list' %>
     <div id="paging" class="d-flex justify-content-end mt-4">
-      <%= render 'searches/paging' %>
+      <% if @results_count > 0 %>
+        <%= render 'searches/paging' %>
+      <% end %>
     </div>
   </div>
 </div>
@@ -20,7 +22,7 @@
     let ul = document.querySelector('ul.pagination');
     let url = "<%= articles_path %>";
     let page = <%= @page %>;
-    let keyword= "<%= @keyword %>";
+    let keyword = "<%= @keyword %>";
     let totalPages = <%= @total_pages %>;
 
     let p = new Paging(ul, url, page, totalPages, keyword)
