static pages in en&fr ok!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
     <% end %>
     <%= render 'layouts/flash' %>
 <%= render 'layouts/loading_animation' %>
+    <%= link_to_unless_current "fr", locale: :fr %>
+    <%= link_to_unless_current "en", locale: :en %>
     <%= yield %>
     <% if controller_name == "sessions" || controller_name == "users"|| controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us" || action_name == "not_found" || action_name == "internal_error" || action_name == "unacceptable" %> 
       <%= render "layouts/footer_sticky" %>
