static pages in en&fr ok!

--- a/app/views/static_pages/what_is_gaffex.en.html.erb
+++ b/app/views/static_pages/what_is_gaffex.en.html.erb
@@ -6,136 +6,58 @@
             <div class="card border-light p-4 justify-content-center bg-light ">
                 <div class="card-header">What... is Gaffex?</div>
                 <div class="card-body card-body justify-content-center">
-                    GAFFEx, qu’est-ce que cela signifie ? Cela signifie GAthering of Fondamentalement Failed
-                    Experiments. GAFFEx est un outil développé par les scientifiques pour les scientifiques. Il a
-                    été créé par un banc de jeunes chercheurs et développeurs qui croyaient vraiment que les
-                    sciences ont besoin d’un endroit où les résultats scientifiques inattendus peuvent être partagés
-                    à l’échelle mondiale. Et c’est là que GAFFEx est venu vivre, sous la forme d’un site web où vous
-                    pouvez partager librement ce qui est impossible dans votre domaine scientifique.
+                   GAFFEx, what does that mean? It stands for GAthering of Fundamentally Failed Experiments. GAFFex is a tool developed by scientists for scientists. It has been created by a bench of young researchers and developers that truly believed that sciences need a place where scientific unexpected results can be shared globally. And this is where GAFFEx came to live, in the form of a website where you can share freely what is impossible in your field of science. 
                 </div>
             </div>
             
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header">Historique</div>
+                <div class="card-header">History</div>
                     <div class="card-body card-body justify-content-center">
-                        L’idée de développer le GAFFEx a émergé dans le cerveau d’un doctorant qui avait des hypothèses
-                        vraiment
-                        fortes, et beaucoup de données qui ont confirmé définitivement que les résultats attendus ne
-                        peuvent pas
-                        être obtenus. En ce moment, la possibilité de publier ces résultats était vraiment rare. À la
-                        fin de son
-                        doctorat, il a trouvé un très bon emploi dans une entreprise et a commencé à développer son
-                        idée. Il a
-                        trouvé des amis et des collègues pour se joindre à cette aventure et ils ont travaillé ensemble
-                        pour mettre
-                        en œuvre le projet. Il a fallu 3 ans avant de tester une première version de la plateforme. Dès
-                        la naissance
-                        de GAFFEx, tout le monde a travaillait sur GAFFEx en tant que volontaires. Le projet a été
-                        financé par la «
-                        Fondation de France » qui a accordé une bourse à Gilmary Gallon en 2018.
+                        The idea of developing GAFFEx has emerged in the brain of a PhD student who had really strong hypothesis, and a lot of data that definitely confirmed that the expected results cannot be obtained. At this moment, the opportunity to publish these results were really scarce. At the end of its PhD, he found a very good job in a company and began to develop his idea. He found some friends and colleagues to join this adventure and they worked together to implement the project. It took 3 years before testing a first version of the platform. From the birth of GAFFEx, everybody worked on GAFFEx as volunteers. The project has been funded by the « Fondation de France » who gave a grant to Gilmary Gallon in 2018. 
                     </div>
             </div>
                            
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header">Pourquoi GAFFEx est-il si nécessaire ?</div>
+                <div class="card-header">Why… Is GAFFEx so necessary?</div>
                     <div class="card-body card-body justify-content-center">
-                            Tout d’abord, qu’est-ce qu’une expérience échouée ? Une expérience échouée correspond à un
-                            résultat qui
-                            diffère de ce qui peut être attendu ou même souhaité. Les expériences échouées font partie
-                            de la science,
-                            surtout dans les phases d’exploration de projets difficiles. Les beaux échecs peuvent
-                            sérieusement remettre
-                            en question les hypothèses de travail et conduire généralement à un changement dans la
-                            stratégie générale ou
-                            les méthodologies employées. Cependant, ces données préliminaires sont parfois considérées
-                            comme
-                            insignifiantes et ne sont pas valorisées même si, dans de nombreux projets, elles sont le
-                            fruit d’heures de
-                            travail et ont consommé des matières premières précieuses à générer. Il peut aussi arriver
-                            qu’une expérience
-                            soit considérée comme un échec parce qu’elle ne corrobore pas les résultats publiés
-                            précédemment. Ce cas
-                            rejoint le dilemme de la reproductibilité que les chercheurs rencontrent assez souvent (réf
-                            : baker 2016).
-                            Dans ce contexte, il est encore plus important de publier des expériences ratées, car cela
-                            aide la recherche
-                            à déterminer quel résultat faire confiance, celui publié ou son propre travail.
+                            First of all, what is a failed experiment ? A failed experiment corresponds to a result that differs from what can be expected or even desired. Failed experiments are part of science, especially within the exploration phases of challenging projects. Beautiful failures can badly challenge working assumptions and usually lead to a shift in the general strategy or employed methodologies. However, these preliminary data are sometimes seen as meaningless and aren’t valued even if in many projects they are the fruit of hours of work and have consumed valuable raw materials to be generated. It can also happen that an experiment is referred as a fail because it doesn’t corroborate previously published results. This case joins the dilemma of reproducibility that researchers encounter quite often (ref baker 2016). In this context it is even more important to publish failed experiments, because it helps the research to determine which result to trust, the one published or its own work. 
                     </div>
             </div>
                                     
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header">Qui peut accéder au GAFFEx ?</div>
+                <div class="card-header">What issues...does GAFFEx want to solve?</div>
                     <div class="card-body card-body justify-content-center">
-                                Pour savoir comment le GAFFEx fonctionne, il faut savoir pourquoi les expériences
-                                échouées ne sont
-                                généralement pas publiées. La confidentialité vient en premier et c’est pourquoi GAFFEx
-                                propose un mode
-                                alternatif de publication, où le résultat est publié sans tout le contexte général de
-                                l’étude. Ensuite, le
-                                temps nécessaire à un chercheur pour publier de telles données est un autre problème et
-                                GAFFEx est conçu
-                                pour réduire considérablement ce temps. De plus, la publication de « résultats négatifs
-                                » n’est généralement
-                                pas acceptée dans la revue classique pour les aspects de la notoriété et la prise en
-                                compte de l’examen des
-                                paires.
+                                To know how GAFFEx works one has to know why failed experiments are generally not published ? Confidentiality is coming first and this is why GAFFEx propose an alternative mode of publication, where the result is published without all the general context of the study. Then, the time needed for a researcher to publish such data is another issue and GAFFEx is designed to reduce considerably this time. Additionally, publishing « negative results » is generally not accepted in classical journal for fame aspects and pair review consideration, thus GAFFEx aims at operating a change of paradigm but proposing a new revision system which will help collecting failed experiments data. 
                     </div>
             </div>       
 
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header">Quels problèmes GAFFEx veut-il résoudre ?</div>
+                <div class="card-header">What issues...does GAFFEx want to solve?</div>
                     <div class="card-body card-body justify-content-center">
-                                    GAFFEx suit les préceptes des sciences ouvertes et a été rêvé comme une plate-forme
-                                    entièrement ouverte.
-                                    Nous avions en fait à l’esprit que tout scientifique pourrait, avant d’entrer dans
-                                    le laboratoire, vérifier
-                                    GAFFEx pour être sûr que son expérience n’a pas été précédemment considéré comme
-                                    impossible. De cette façon,
-                                    GAFFEx est librement accessible à tout professeur, chercheur, étudiant ou citoyen
-                                    intéressé et ce sans
-                                    publicité ou vente de nos données.
+                                    To know how GAFFEx works one has to know why failed experiments are generally not published ? Confidentiality is coming first and this is why GAFFEx propose an alternative mode of publication, where the result is published without all the general context of the study. Then, the time needed for a researcher to publish such data is another issue and GAFFEx is designed to reduce considerably this time. Additionally, publishing « negative results » is generally not accepted in classical journal for fame aspects and pair review consideration, thus GAFFEx aims at operating a change of paradigm but proposing a new revision system which will help collecting failed experiments data. 
                     </div>
             </div>
                                                       
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header"> Qui peut soumettre et évaluer des expériences?</div>
+                <div class="card-header">Who… Can access GAFFEx?</div>
                     <div class="card-body card-body justify-content-center">
-                                        Lorsque vous vous habituez au GAFFEx, vous pouvez bientôt entrer votre propre
-                                        expérience ratée ou examiner
-                                        et commenter celles de nos collègues. Ceci est ouvert à tous les utilisateurs
-                                        connectés à la plateforme.
-                                        GAFFEx offre plusieurs options de connexion et vous pouvez par exemple choisir
-                                        de soutenir le développement
-                                        de GAFFEx en vous impliquant dans son développement ou en demandant à votre
-                                        établissement de nous soutenir.
+                                        GAFFEx is following the precepts of open sciences and has been dreamt as a fully open platform. We actually had in mind that any scientist could, before entering the lab, check GAFFEx to be sure his experiment hasn’t be previously referred as impossible. This way GAFFEx is freely accessible to any interested professor, researcher, student or citizen and this without advertising or selling any of our data. 
                     </div>
             </div>
                                 
             <div class="card border-light p-4 justify-content-center bg-light ">
-                <div class="card-header"> Comment GAFFEx fonctionne-t-il?</div>
+                <div class="card-header"> Who can submit and review experiments?</div>
                     <div class="card-body justify-content-center">
-                                            Ensuite, si vous voulez plus de détails, un modèle sera disponible pour la
-                                            soumission de votre expérience.
-                                            Vous remplirez les champs de texte et votre papier sera automatiquement
-                                            formaté. Après votre propre
-                                            validation, il sera partagé avec les utilisateurs de GAFFEx. Tous les
-                                            lecteurs pourront commenter et évaluer
-                                            votre expérience, jusqu’à ce qu’elle atteigne un niveau de fiabilité
-                                            suffisant. Ensuite, il sera considéré
-                                            comme un document « accepté » et obtiendra un DOI pour le citer dans
-                                            d’autres documents.
-
-                                            Après examen par différents utilisateurs, votre poste peut être à nouveau
-                                            mis en œuvre. Vous pouvez ajouter
-                                            des expériences qui renforcent les résultats négatifs. Vous pouvez également
-                                            modifier certains paramètres de
-                                            votre expérience et obtenir des résultats différents. Ces nouvelles
-                                            soumissions demeureront associées aux
-                                            expériences initiales. Toutes ces données enrichiront la plateforme GAFFEx.
-                                            Si vous obtenez finalement des
-                                            résultats positifs associés à vos données publiées sur GAFFEx, vous pourrez
-                                            citer votre propre publication
-                                            dans le document où vous soumettez l’ensemble des résultats.  
+                                            When getting used to GAFFEx, soon you may want to input your own failed experiment or review and comment those of our colleagues. This is open to all users signed-in to the platform. GAFFEx is offering several signing-in options and you may for example choose to support the development of GAFFEx by getting involved in its development or asking your institution to back us up. 
+                    </div>                                    
+            </div>
+            
+            <div class="card border-light p-4 justify-content-center bg-light ">
+                <div class="card-header"> How... does GAFFEx work?</div>
+                    <div class="card-body justify-content-center"> 
+                  Then if you want more details, a template will be available for the submission of you experiment. You will fill the text fields and your paper will be automatically formatted. After your own validation, it will be shared with GAFFEx users. All the readers will be able to comment and evaluate your experiment, until it reaches sufficient level of reliability. Then it will be considered to an « accepted » paper and will obtain a DOI to cite it in other papers.
+                  After review by different users, your post may be again implemented. You can add experiments that reinforce the negative results. You can also change some parameters in your experience and obtain different results. These new submissions will stay associated to the initial experiments. All these data will enrich the GAFFEx platform. If you finally obtain positive results associated to your published data on GAFFEx, you will be able to cite your own publication in the paper where you submit the whole results. 
+                  When getting used to GAFFEx, soon you may want to input your own failed experiment or review and comment those of our colleagues. This is open to all users signed-in to the platform. GAFFEx is offering several signing-in options and you may for example choose to support the development of GAFFEx by getting involved in its development or asking your institution to back us up. 
                     </div>                                    
             </div>
         </div>
